# Xolik

./: .gitignore  CMakeLists.txt  LimXL.sln  LimXL.vcxproj  LimXL.vcxproj.filters  README.md
lib/: MzLoader.h  PPData.h  gtest.lib  gtest_main.lib  gtest_maind.lib  mzloader.lib  mzloaderd.lib  ppdata.lib  ppdatad.lib
scripts/: collect_stats.ipynb  data_loader.py  kojak-control.py  splitctrl.py  synthetic_analysis.ipynb
src/: Evalue.h  Fdr.h  LimXL.h  Match.h  PPArray.h  Params.h  Protocol.h  ScoreArray.h  Scores.h  Search.h  XCorr.h  cli.cpp
test/: RegressionTest.cpp  RibosomeRegression.cpp  SyntheticRegression.cpp  Test_XCorr.cpp
test/data/: lib1.csv  lib1_noevalue.csv  lib2.csv  lib2_noevalue.csv  lib3.csv  lib3_noevalue.csv  lib_disulfide_peptides.fasta  reference.csv  synth_plus_100_random.fasta
test/data/ribosome_ref/: DESTRibo_092010exp2_LEF10.mzXML.output.csv  DESTRibo_092010exp2_LEF1_101012172356.mzXML.output.csv  DESTRibo_092010exp2_LEF2.mzXML.output.csv  DESTRibo_092010exp2_LEF3.mzXML.output.csv  DESTRibo_092010exp2_LEF4.mzXML.output.csv  DESTRibo_092010exp2_LEF5.mzXML.output.csv  DESTRibo_092010exp2_LEF6.mzXML.output.csv  DESTRibo_092010exp2_LEF7.mzXML.output.csv  DESTRibo_092010exp2_LEF8.mzXML.output.csv  DESTRibo_092010exp2_LEF9.mzXML.output.csv  DESTRibo_092010exp2_LE_1and2rejected.mzXML.output.csv  DESTRibo_092010exp2_WD_1and2rejected.mzXML.output.csv  DESTRibo_092210exp2_LEF1.mzXML.output.csv  DESTRibo_092210exp2_LEF10.mzXML.output.csv  DESTRibo_092210exp2_LEF2.mzXML.output.csv  DESTRibo_092210exp2_LEF3.mzXML.output.csv  (+35 more)
